added links to .html files

--- a/market-report.html
+++ b/market-report.html
@@ -1,4 +1,18 @@
-<table>
+<!DOCTYPE html>
+<html lang= "en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Exceptional Realty Group - Luxury Homes - Contact</title>
+  </head>
+  <body>
+    <a href="index.html">About</a>
+    <a href="new-properties.html">New Properties</a>
+    <a href="real-estate-listings.html">Listings</a>
+    <a href="market-report.html">Market Report</a>
+    <a href="contact.html">Contact</a>
+    <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+    <img src="images/intro-pic.jpg" alt="a beautiful living room" title="Welcome to Exceptional Realty">
+  <table>
   <tr>
     <th>Address</th>
     <th>City</th>
@@ -23,4 +37,6 @@
     <td>New York</td>
     <td>$1.1 mil</td>
   </tr>
-</table>
+  </table>
+  </body>
+</html>
