--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js">
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"</script>
   </head>
   <body>
   <header>
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
-    <nav>
-      <a href="index.html">About</a>
-      <a href="new-properties.html">New Properties</a>
-      <a href="real-estate-listings.html">Listings</a>
-      <a href="market-report.html">Market Report</a>
-      <a href="contact.html">Contact</a>
-      <a href="http://hud.gov" target='_blank'>H.U.D.</a>
-    </nav>
-    </header>
+    <div class="wrapper">
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+        <nav>
+          <a href="index.html">About</a>
+          <a href="new-properties.html">New Properties</a>
+          <a href="real-estate-listings.html">Listings</a>
+          <a href="market-report.html">Market Report</a>
+          <a href="contact.html">Contact</a>
+          <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <div class="wrapper">
     <section id="featured-property">
       <figure>
         <img src="images/intro-pic.jpg" alt="a beautiful living room" title="Welcome to Exceptional Realty">
@@ -43,6 +48,43 @@
         </video>
         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
       </figure>
+    </section>
+    <section id="news">
+      <h3>Company News</h3>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+    </div>
+    <section id="details">
+      <div class="wrapper">
+        <div>
+          <h3>Contact</h3>
+          <p>email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          phone: +1 710 555 1234
+          </p>
+          <h3>Correspondence</h3>
+          <address>
+            Exceptional Realty<br>
+            P.O.Box 5555<br>
+            Brooklyn, NY 11201
+          </address>
+        </div>
+        <div>
+          <h3>Links</h3>
+          <p>
+            <a href="#" target="_blank">Home Restoration</a><br>
+            <a href="#" target="_blank">Afordable Mortgages</a><br>
+            <a href="#" target="_blank">Professional Moving Crew</a>
+          </p>
+        </div>
+        <div>
+          <h3>Follow</h3>
+          <p>
+            <a href="#" target="_blank">Youtube</a><br>
+            <a href="#" target="_blank">Facebook</a><br>
+            <a href="#" target="_blank">Twitter</a>
+          </p>
+        </div>
+      </div>
     </section>
     <footer>
       &copy; 2014 Exceptional Realty Group. All Rights Reserved.
